--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -38,8 +38,8 @@ jobs:
           context: .
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: |
-              ghcr.io/${{ toLower(github.repository_owner) }}/tiktoktom:2026
+          tags: | 
+            ghcr.io/${{ github.repository_owner }}/tiktoktom:2026
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.description=HTTP Server
